# AimTrainer

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  button.hpp  main.cpp  mode.hpp  screen.hpp  video.cpp  video.hpp
